Added "release" versions of newly added build configurations.

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,11 @@
 /win32-mingw-libfgeal-release/
 
 /linux-gcc-allegro5.0-debug/
+/linux-gcc-allegro5.0-release/
 /linux-gcc-sdl1.2-debug/
+/linux-gcc-sdl1.2-release/
 /linux-gcc-sdl2.0-debug/
+/linux-gcc-sdl2.0-release/
 
 # Eclipse local files
 language.settings.xml
